@@ -1,7 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
-          - some refactoring of vocabulary methods, to faciliate re-use
+          - some refactoring of vocabulary and document methods, to faciliate
+            re-use
           - new utility function: is_uri_reference
 
 0.523     2021-10-24 05:58:27Z
